# ncp_file_manager

./: .gitignore  Dockerfile  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt
.devcontainer/: .dockerignore  devcontainer.json
src/logiroad_ncp_file_manager/: __init__.py  __version__.py  blob_storage_client.py  blob_storage_processor.py  blob_storage_structure.py  blob_storage_structure_template.json  const.py  image_naming.py  models.py  ncp_file_manager_class.py  settings.py
src/logiroad_ncp_file_manager/azure_functions/: __init__.py  azure_download_blobs.py  azure_manager_class.py  azure_storage_client.py  azure_storage_processor.py  azure_upload_files_to_blobs.py
